Fixes flat listings overflowing their container

--- a/src/js/App.scss
+++ b/src/js/App.scss
@@ -1,3 +1,8 @@
+.app {
+  display: flex;
+  flex-direction: column;
+}
+
 .main-content {
   display: flex;
   flex-grow: 1;
